@@ -15,7 +15,7 @@ public class GestReparacoesFacade implements IGestReparacoes {
 	private List<ReparacaoExpresso> reparacoesDisponiveis;
 
 	public List<Orcamento> getOrcamentosAtivos() {
-		return this.orcs.values().stream().filter(Orcamento::estaAtivo).toList();
+		return this.orcs.values().stream().filter(Orcamento::estaAtivo).collect(Collectors.toList());
 	}
 
 	/**
@@ -51,8 +51,8 @@ public class GestReparacoesFacade implements IGestReparacoes {
 	 * @param estado
 	 */
 	public void alterarEstadoOrc(String orcID, EstadoOrcamento estado) {
-		// TODO - implement GestReparacoesFacade.alterarEstadoOrc
-		throw new UnsupportedOperationException();
+		Orcamento o = this.orcs.get(orcID);
+		o.alteraEstado(estado);
 	}
 
 	/**
@@ -61,8 +61,8 @@ public class GestReparacoesFacade implements IGestReparacoes {
 	 * @param estado
 	 */
 	public void alterarEstadoRep(String repID, EstadoReparacao estado) {
-		// TODO - implement GestReparacoesFacade.alterarEstadoRep
-		throw new UnsupportedOperationException();
+		Reparacao r = this.reps.get(repID);
+		r.alteraEstado(estado, null);
 	}
 
 	/**
@@ -72,8 +72,8 @@ public class GestReparacoesFacade implements IGestReparacoes {
 	 * @param comentario
 	 */
 	public void alterarEstadoRep(String repID, EstadoReparacao estado, String comentario) {
-		// TODO - implement GestReparacoesFacade.alterarEstadoRep
-		throw new UnsupportedOperationException();
+		Reparacao r = this.reps.get(repID);
+		r.alteraEstado(estado, comentario);
 	}
 
 	/**
@@ -162,8 +162,8 @@ public class GestReparacoesFacade implements IGestReparacoes {
 	 * @param descr
 	 */
 	public void registarOrcamento(Equipamento equip, String descr) {
-		// TODO - implement GestReparacoesFacade.registarOrcamento
-		throw new UnsupportedOperationException();
+		Orcamento o = new Orcamento(equip, descr);
+		this.orcs.put(o.getID(), o);
 	}
 
 	/**
@@ -172,8 +172,8 @@ public class GestReparacoesFacade implements IGestReparacoes {
 	 * @param passos
 	 */
 	public void registaPT(String orcId, List<PassoReparacao> passos) {
-		// TODO - implement GestReparacoesFacade.registaPT
-		throw new UnsupportedOperationException();
+		Orcamento o = this.orcs.get(orcId);
+		o.setPT(passos);
 	}
 
 	/**
